[package]
name = "pocket-db"
version = "0.1.0"
description = "A database for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/pocket"
edition = "2021"

[dependencies]
heed = { git = "https://github.com/meilisearch/heed", rev = "036ac23f73a021894974b9adc815bc95b3e0482a" }
mmap-append = "0.2"
pocket-types = { path = "../pocket-types" }

[dev-dependencies]
secp256k1 = { version = "0.28", features = [ "hashes", "global-context", "rand-std" ] }
tempfile = "3"
