[package]
name = "pocket-types"
version = "0.1.0"
description = "A set of low-level types for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/pocket"
edition = "2021"

[dependencies]
derive_more = "0.99"
rand = "0.9"
secp256k1 = { version = "0.31", features = [ "hashes", "global-context", "rand", "std" ] }
